--- a/.github/workflows/BuildExtension.yml
+++ b/.github/workflows/BuildExtension.yml
@@ -1,37 +1,48 @@
-# https://blog.elmah.io/build-and-publish-visual-studio-extensions-with-github-actions/
 name: Build Extension
 
 on:
   push:
-    branches: [ master ] # TODO: Change this, I don't know why git keeps using master
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
+
       - name: Configure nuget
         uses: nuget/setup-nuget@v1
+
       - name: Configure msbuild
-        uses: microsoft/setup-msbuild@v1.0.2
+        uses: microsoft/setup-msbuild@v1.3.0
+
       - name: Update version
+        shell: pwsh
         run: |
-          (Get-Content -Path MonokaiVibrantAmped\source.extension.vsixmanifest) |
-            ForEach-Object {$_ -Replace '1.0.0', '1.0.${{ github.run_number }}'} |
-              Set-Content -Path MonokaiVibrantAmped\source.extension.vsixmanifest
-          (Get-Content -Path MonokaiVibrantAmped\Properties\AssemblyInfo.cs) |
-            ForEach-Object {$_ -Replace '1.0.0', '1.0.${{ github.run_number }}'} |
-              Set-Content -Path MonokaiVibrantAmped\Properties\AssemblyInfo.cs
-          (Get-Content -Path MonokaiVibrantAmped\MonokaiVibrantAmped.cs) |
-            ForEach-Object {$_ -Replace '1.0.0', '1.0.${{ github.run_number }}'} |
-              Set-Content -Path MonokaiVibrantAmped\MonokaiVibrantAmped.cs
+          $files = @(
+              'MonokaiVibrantAmped\source.extension.vsixmanifest',
+              'MonokaiVibrantAmped\Properties\AssemblyInfo.cs'
+              'MonokaiVibrantAmped\MonokaiVibrantAmped.cs'
+          )
+          foreach ($file in $files) {
+              if (Test-Path -Path $file) {
+                  $content = Get-Content -Path $file
+                  $updated = $content | ForEach-Object { $_ -Replace '1.0.0', "1.0.$env:GITHUB_RUN_NUMBER" }
+                  Set-Content -Path $file -Value $updated -NoNewline
+              } else {
+                  Write-Warning "File not found: $file"
+              }
+          }
+
       - name: Restore
         run: nuget restore
+
       - name: Build
         run: msbuild /p:configuration=Release /p:DeployExtension=false /p:ZipPackageCompressionLevel=normal
+
       - uses: actions/upload-artifact@v4
         with:
           name: MonokaiVibrantAmped.vsix
