Fix build path, maybe

--- a/.github/workflows/BuildExtension.yml
+++ b/.github/workflows/BuildExtension.yml
@@ -42,4 +42,4 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: MonokaiVibrantAmped.vsix
-          path: \bin\Release\MonokaiVibrantAmped.vsix
+          path: bin\Release\MonokaiVibrantAmped.vsix
